--- a/app/src/main/res/layout/activity_view_fine.xml
+++ b/app/src/main/res/layout/activity_view_fine.xml
@@ -59,8 +59,8 @@
         android:id="@+id/recyclerViewTicketList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:clipToPadding="false"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="10dp"
         android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
