--- a/app/src/main/res/layout/activity_display_user_info.xml
+++ b/app/src/main/res/layout/activity_display_user_info.xml
@@ -10,7 +10,7 @@
     <View
         android:id="@+id/view2"
         android:layout_width="match_parent"
-        android:layout_height="170dp"
+        android:layout_height="160dp"
         android:background="@drawable/bg_purple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,11 +52,12 @@
         android:id="@+id/user_image"
         android:layout_width="134dp"
         android:layout_height="121dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="92dp"
         android:src="@drawable/bill_gates"
         app:civ_border_color="#FFF"
         app:civ_border_width="6dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
@@ -64,7 +65,7 @@
     <LinearLayout
         android:layout_width="383dp"
         android:layout_height="490dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="7dp"
         android:background="@drawable/bg_white"
         android:orientation="vertical"
         android:padding="24dp"
@@ -236,19 +237,19 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="15dp"
             android:background="#f4f4f4" />
 
         <Button
             android:id="@+id/addFine2"
-            android:layout_gravity="center_horizontal"
-            android:textAllCaps="false"
             android:layout_width="200dp"
             android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
             android:background="@drawable/bg_btn"
+            android:text="Add Fine"
+            android:textAllCaps="false"
             android:textColor="#FFF"
-            android:textSize="18sp"
-            android:text="Add Fine" />
+            android:textSize="18sp" />
     </LinearLayout>
 
 
