--- a/app/src/main/res/layout/activity_finger_print_authentication.xml
+++ b/app/src/main/res/layout/activity_finger_print_authentication.xml
@@ -13,14 +13,14 @@
 
     <TextView
         android:id="@+id/headingLabel"
-        android:layout_width="52dp"
-        android:layout_height="wrap_content"
+        android:layout_width="107dp"
+        android:layout_height="52dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="177dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="181dp"
+        android:layout_marginStart="149dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginEnd="155dp"
         android:text="@string/app_name"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -36,10 +36,10 @@
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="133dp"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="19dp"
         android:layout_marginEnd="137dp"
         app:lottie_autoPlay="true"
-        app:lottie_rawRes="@raw/biometric"/>
+        app:lottie_rawRes="@raw/biometric" />
 
     <TextView
         android:id="@+id/textView9"
@@ -50,12 +50,12 @@
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="133dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="19dp"
         android:layout_marginEnd="136dp"
         android:text="Touch ID"
         android:textAlignment="center"
         android:textColor="@color/colorBackground"
-        android:textSize="35dp" />
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -80,25 +80,25 @@
         android:layout_below="@+id/textView2"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="123dp"
-        android:layout_marginEnd="40dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="49dp"
+        android:layout_marginEnd="40dp"
         android:padding="20dp"
-        android:textAlignment="center"
         android:text="Place your Finger on the Scanner to Proceed"
+        android:textAlignment="center"
         android:textColor="@color/colorBackground" />
 
     <Button
         android:id="@+id/loginInsteadBtn"
-        android:layout_width="179dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
         android:layout_below="@+id/paraLabel"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="119dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="113dp"
+        android:layout_marginStart="99dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="100dp"
         android:background="@drawable/ic_proceed"
         android:text="Login Instead"
         android:textColor="@color/colorBackground"
