--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,6 +77,7 @@
                         android:id="@+id/police_MainProfile"
                         android:layout_width="87dp"
                         android:layout_height="75dp"
+                        android:layout_marginEnd="52dp"
                         android:src="@drawable/bill_gates"
                         app:civ_border_color="#636363"
                         app:civ_border_width="2dp"
@@ -85,7 +86,7 @@
                         app:layout_constraintHorizontal_bias="0.8"
                         app:layout_constraintStart_toEndOf="@+id/textView13"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="1.0" />
+                        app:layout_constraintVertical_bias="0.6" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -108,13 +109,13 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="5dp"
+                        android:padding="4dp"
                         android:orientation="vertical">
 
                         <RelativeLayout
                             android:id="@+id/scannReg"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
                             android:background="@drawable/card_1">
 
                             <ImageView
@@ -136,13 +137,13 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="5dp"
+                        android:padding="4dp"
                         android:orientation="vertical">
 
                         <RelativeLayout
                             android:id="@+id/searchUser"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
                             android:background="@drawable/card_2">
 
                             <ImageView
@@ -155,22 +156,22 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textAlignment="center"
+                            android:gravity="center_horizontal"
                             android:text="Search Car"
-                            android:textColor="@color/colorTextPrimary"
-                            android:gravity="center_horizontal"/>
+                            android:textAlignment="center"
+                            android:textColor="@color/colorTextPrimary" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="5dp"
+                        android:padding="4dp"
                         android:orientation="vertical">
 
                         <RelativeLayout
                             android:id="@+id/crimeMain"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
                             android:background="@drawable/card_3">
 
                             <ImageView
@@ -192,13 +193,13 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="5dp"
+                        android:padding="4dp"
                         android:orientation="vertical">
 
                         <RelativeLayout
                             android:id="@+id/trackMain"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
                             android:background="@drawable/card_4">
 
                             <ImageView
