--- a/app/src/main/res/layout/activity_search_data.xml
+++ b/app/src/main/res/layout/activity_search_data.xml
@@ -32,38 +32,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:padding="5dp"
-        android:layout_marginRight="20dp"
+        android:padding="1dp"
+        android:layout_marginRight="10dp"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:padding="5dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="1dp">
 
-        <EditText
-            android:id="@+id/search_field"
-            android:layout_width="285dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/bg_input"
-            android:drawableStart="@drawable/person_search"
-            android:drawablePadding="5dp"
-            android:layout_margin="15dp"
-            android:layout_marginRight="5dp"
-            android:hint="Search Vehicle..."
-            android:paddingStart="10dp"
-            android:textColorHint="@color/colorTextPrimary"
-            />
+            <EditText
+                android:id="@+id/search_field"
+                android:layout_width="255dp"
+                android:layout_height="50dp"
+                android:layout_margin="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="1dp"
+                android:background="@drawable/bg_input"
+                android:drawableStart="@drawable/person_search"
+                android:drawablePadding="5dp"
+                android:hint="Search Vehicle..."
+                android:paddingStart="10dp"
+                android:textColorHint="@color/colorTextPrimary" />
         </LinearLayout>
 
         <ImageButton
             android:id="@+id/search_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginTop="15dp"
             app:srcCompat="@drawable/ic_search_user"
             android:background="@color/colorBackground"
