--- a/app/src/main/res/layout/activity_text_recognizer.xml
+++ b/app/src/main/res/layout/activity_text_recognizer.xml
@@ -29,14 +29,13 @@
 
         <ImageView
             android:id="@+id/imageScan"
-            android:layout_width="320dp"
-            android:layout_height="300dp"
-            android:layout_gravity="center"
+            android:layout_width="295dp"
+            android:layout_height="257dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_gravity="center"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="10dp"
-            />
+            android:layout_marginTop="10dp" />
 
         <TextView
             android:id="@+id/displayText"
